# gateguard

./: .gitignore  LICENSE  README.md  action.yml  article_note.md  pyproject.toml
.github/workflows/: ci.yml
src/gateguard/: __init__.py  bughunt.py  cli.py  config.py  hook.py  log.py  messages.py  read_tracker.py  state.py
tests/: __init__.py  conftest.py  test_bughunt.py  test_cli.py  test_config.py  test_hook.py  test_read_tracker.py  test_state.py
